--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Projeto 1 - Página com Thingspeak</title>
-    <script>
+<!--    <script>
         //criar váriavel global
         var count=1;
         //definição de função para envio de dados para o thinkspeak
@@ -21,7 +21,7 @@
         //a função de envio de dados é chamada de 3 em 3 segundos
         setInterval( function() { sendToAPI(count) }, 3000);
         
-    </script>
+    </script> -->
   </head>
          
   <body>
